feat: add e2e tests and update worker entry point for MCP server
- Update src/index.ts to handle /mcp endpoint with MCP server integration
- Fix execute_calculation error handling in MCP server
- Add e2e test suite in tests/e2e/ with HTTP-based testing
- Add run-e2e.sh script for automated e2e test execution
- Add test:e2e script to package.json
- Fix TypeScript types in integration test
- Update wrangler.toml with environment variable documentation

E2E tests validate full HTTP flow: server startup, tools/list, tools/call endpoints.
Integration tests still validate MCP protocol communication.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest",
     "test:unit": "vitest run tests/unit",
     "test:integration": "tsx tests/integration",
+    "test:e2e": "tsx tests/e2e/test-server.ts",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
