--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "packageManager": "pnpm@10.16.0",
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.0",
+    "@ai-sdk/openai": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "ai": "^4.0.0",
     "zod": "^3.25.76"
