feat(executor): implement QuickJS WASM sandbox for Cloudflare Workers
Replace new Function() with QuickJS WASM to enable code execution in Cloudflare Workers environment.

BREAKING CHANGE: executeSafely() is now async and requires await

- Add quickjs-emscripten and @jitl/quickjs-wasmfile-release-sync dependencies
- Create copy-wasm-file-into-src.sh script to embed WASM files at build time
- Refactor sandbox.ts to use QuickJS evalCode() instead of new Function()
- Update validator.ts to remove new Function() syntax checking (blocked in Workers)
- Fix context serialization to work with QuickJS runtime
- Wrap code with return statements in IIFE (QuickJS limitation)
- Update all tests to handle async executeSafely()
- Add postinstall script to automatically copy WASM files

Fixes code execution failures in Cloudflare Workers production environment.
Bundle size increased from ~894KB to ~1495KB due to WASM module.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test:integration": "tsx tests/integration",
     "test:multi-turn": "tsx tests/integration/test-multi-turn.ts",
     "test:e2e": "tsx tests/e2e/test-server.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "copy-wasm": "./scripts/copy-wasm-file-into-src.sh",
+    "postinstall": "pnpm copy-wasm"
   },
   "keywords": [
     "mcp",
@@ -27,8 +29,10 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.0.0",
     "@ai-sdk/openai": "^1.0.0",
+    "@jitl/quickjs-wasmfile-release-sync": "^0.31.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "ai": "^4.0.0",
+    "quickjs-emscripten": "^0.31.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
